--- a/products.html
+++ b/products.html
@@ -40,13 +40,13 @@
             </div>
             <div class="grid masonry columns-3 gallery" id="grid">
               <div class="grid-sizer"></div>
-              <div class="grid-item column design"><a class="thumb space-2 lightbox" href="assets/images/work/skateshirt.png"><img alt="Nevo example image" src="assets/images/work/skateshirt.png"/>
+              <div class="grid-item column design"><a class="thumb space-2 lightbox" href="assets/images/work/skateshirt.png"><img alt="Nevo example image" src="assets/images/work/highcompressskateshirt.png"/>
                   <div class="labels"></div>
                   <div class="caption"> 
                     <div class="title"></div>
                     <div class="sub"></div>
                   </div></a></div>
-              <div class="grid-item column  branding"><a class="thumb space-2 lightbox" href="assets/images/work/cigshirt.png"><img alt="Nevo example image" src="assets/images/work/cigshirt.png"/>
+              <div class="grid-item column  branding"><a class="thumb space-2 lightbox" href="assets/images/work/cigshirt.png"><img alt="Nevo example image" src="assets/images/work/highcompresscigshirt.png"/>
                   <div class="labels"></div>
                   <div class="caption"> 
                     <div class="title"></div>
@@ -58,19 +58,19 @@
                     <div class="title"></div>
                     <div class="sub"></div>
                   </div></a></div>
-              <div class="grid-item column  branding"><a class="thumb space-2 lightbox" href="assets/images/work/arti.png"><img alt="Nevo example image" src="assets/images/work/arti.png"/>
+              <div class="grid-item column  branding"><a class="thumb space-2 lightbox" href="assets/images/work/arti.png"><img alt="Nevo example image" src="assets/images/work/highcompressarti.png"/>
                   <div class="labels"></div>
                   <div class="caption"> 
                     <div class="title"></div>
                     <div class="sub"></div>
                   </div></a></div>
-              <div class="grid-item column design"><a class="thumb space-2 lightbox" href="assets/images/work/danshirt.png"><img alt="Nevo example image" src="assets/images/work/danshirt.png"/>
+              <div class="grid-item column design"><a class="thumb space-2 lightbox" href="assets/images/work/danshirt.png"><img alt="Nevo example image" src="assets/images/work/highcompressdanshirt.png"/>
                   <div class="labels"></div>
                   <div class="caption"> 
                     <div class="title"></div>
                     <div class="sub"></div>
                   </div></a></div>
-              <div class="grid-item column  branding"><a class="thumb space-2 lightbox" href="assets/images/work/dan1shirt.png"><img alt="Nevo example image" src="assets/images/work/dan1shirt.png"/>
+              <div class="grid-item column  branding"><a class="thumb space-2 lightbox" href="assets/images/work/dan1shirt.png"><img alt="Nevo example image" src="assets/images/work/highcompressdan1shirt.png"/>
                   <div class="labels"> </div>
                   <div class="caption"> 
                     <div class="title"></div>
