--- a/products.html
+++ b/products.html
@@ -18,6 +18,17 @@
     <meta name="theme-color" content="#ffffff">
   </head>
   <body>
+    <header class="header">
+        <!-- About section-->
+        <div class="menu about">
+        </div>
+        <!-- Social Navigation-->
+        <ul class="menu social">
+          <!-- <li class="menu-item"><a class="menu-link anchor-link" href="#">Instagram</a></li> -->
+          <!-- <li class="menu-item"><a class="menu-link anchor-link" href="#">Behance</a></li> -->
+          <li class="menu-item"><a class="menu-link anchor-link" href="#" onclick="window.open('/','_self')">Home</a></li>
+        </ul>
+      </header>
       <!-- Page content-->
       <div class="content">
         <section class="section-size-2">
