--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <!-- <li class="menu-item"><a class="menu-link anchor-link" href="#">Instagram</a></li> -->
           <!-- <li class="menu-item"><a class="menu-link anchor-link" href="#">Behance</a></li> -->
           <li class="menu-item"><a class="menu-link anchor-link" href="#" onclick="window.open('/products','_self')">Products</a></li>
+          <li class="menu-item"><a class="menu-link anchor-link" href="#" onclick="window.open('https://paypal.me/mockzubia','_self')">Donate</a></li>
         </ul>
       </header>
       <br><br>
